--- a/day02/07-listeleme taglari.html
+++ b/day02/07-listeleme taglari.html
@@ -31,6 +31,17 @@
             <li>Kiraz</li>
             <li>Ahududu</li>
         </ul>
+        <!-- ul>li*7>lorem3 -->
+        <ul>
+            <li>Lorem, ipsum dolor.</li>
+            <li>Deleniti, aliquid reprehenderit.</li>
+            <li>Ducimus, est cupiditate?</li>
+            <li>Non, vel velit!</li>
+            <li>Recusandae, consequuntur reiciendis.</li>
+            <li>Perferendis, quisquam culpa.</li>
+            <li>Illum, nostrum consequuntur!</li>
+        </ul>
+
         <dl>
             <dt> HTLM  </dt>
                 <dd>Web sayfasi olusturmak icin  kullanilan bir bir isaretleme dilidir. </dd>
