--- a/day02/05-html-entities.html
+++ b/day02/05-html-entities.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- entites
+    <!-- entites :Html dilinde ozel olan karakterleri ya da kalvye de bulunmayan karakterleri yazdirmak icin cesitli kodlar bulunmaktadir. Bunlara html entities denir.
     	non-breaking space	&nbsp;	&#160;	
 <	less than	&lt;	&#60;	
 >	greater than	&gt;	&#62;	
