--- a/day02/06-practice.html
+++ b/day02/06-practice.html
@@ -15,7 +15,7 @@
         the curricula where needed, making the online it courses content always
         relevant.</p>
 <hr>
-   <h2>&lt; OUR VISION &gt;</h2>
+   <h2 id="practice">&lt; OUR VISION &gt;</h2>
    <p> In as little as six months, <u><b>TechPro Education</b> Online <strong>IT</strong> Courses & Bootcamps</u>
     can equip you with the IT knowledge and skills required by the tech job
     market. <mark>They can help you</mark> land a tech job by guiding you with career
@@ -23,5 +23,9 @@
 
   
     
+
+
+
+
 </body>
 </html>
