--- a/day03/10-link-2.html
+++ b/day03/10-link-2.html
@@ -16,6 +16,22 @@
         <li><a href="../day02/04-bicimlendirme-taglari-2.html#xyz-tag">listemele taglarina git</a></li>
         <li><a href=" https://lms.techproeducation.com/my/">techproeducation</a></li>
         <li><a href="https://react-bootstrap.netlify.app/">reactbootstrap</a></li>
+        <!--! yeni bir sayfada acmak icin target  -->
+        <li><a href="https://react-bootstrap.netlify.app/" target="_blank">reactbootstrap</a></li>
+        <!-- !bir dosyaya link vermek istedigimizde -->
+        <li><a href="../assets/document/HTML5NotesForProfessionals.pdf" >document</a></li>
+        <li><a href="../assets/img/marek-piwnicki-G_6kPyje9Lk-unsplash.jpg" >picture1</a></li>
+        <!-- ! emposta adresine link vermek icin 
+              mailto: -->
+        <li><a href="mailto:gulsum.satic@gmail.com">Send email to me</a></li>
+        <!--  ! telefon numarasina link vermek icin -->
+        <li><a href="tel:+90555555555"> call me </a></li>
+        <!-- ! whatsap numarasina link vermek icin -->
+        <li><a href="http://wa.me/+905468762312"> Whatsapp'a git</a></li>
+        <li><a href="http://wa.me/+905468762312?text= Size nasil yardimci olabilirim"> Write me on  Whatsapp</a></li>
+        
+        <li><a href="" >picture1</a></li>
+        
         <li><a href=""></a></li>
     </ul>
 
