--- a/day03/12-audio-video.html
+++ b/day03/12-audio-video.html
@@ -28,8 +28,10 @@
 </video>
 
 <!-- mp3, wav, ogg uzantili dosyalarida kullnilabilir ancak tarayicinin en cok destekledir mp3'tur 
-free music stores pixebay.com-->
+free music stores pixebay.com
 
+mp3, wav, ogg zantili dosyalarida kullnilabilir ancak tarayicinin en cok destekledir mp4'tur 
+-->
 
 
 </body>
