--- a/day03/homework.html
+++ b/day03/homework.html
@@ -7,7 +7,18 @@
 </head>
 <body>
     
-<
+ <ol>
+        <li type="disc"><a href="https://www.index.com.tr/">Ana sayfa</a></li>
+        <li type="disc"><a href="../Urunler.html">Ürünler</a></li>
+            <ul>
+             <li type="1"><a href="Notebook.html">Notebook</a></li>
+             <li type="1"><a href="Monitor.html">Monitör</a></li>
+             <li type="1"><a href="Klavye.html">Klavye</a></li>
+            </ul>
+        </li>
+        <li><a href="https://www.techproeducation.com" target="_blank"><h4>Techpro Education >>></h4></a></li>
+        <li><a href="../İletisim.html"><h4>İletişim</h4></a></li>
+    </ol>
 
 
 </body>
