--- a/day04/20-form-input-2.html
+++ b/day04/20-form-input-2.html
@@ -32,8 +32,20 @@
     <input type="datetime-local" >
     <br>
     <input type="month">
+<br>
+    <select name="iller" multiple size="5">
+        <option value="" disabled selected > seciniz</option>
+        <option value="">istanbul</option>
+        <option value="">Ankara</option>
+        <option value="">Izmir</option>
+        <option value="">Bursa</option>
+    </select>
+    <br>
+<!-- * mesaj gonderme  -->
+    <textarea name="" id="" cols="30" rows="10"></textarea>
 
-    
+ 
+
 
 
 
